--- a/MotoSocia/Views/Shared/_Layout.cshtml
+++ b/MotoSocia/Views/Shared/_Layout.cshtml
@@ -34,6 +34,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="SignUp">Kayıt Ol</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="SignIn">Giriş Yap</a>
+                        </li>
                     </ul>
                 </div>
             </div>
