--- a/MotoSocia/Views/User/SignIn.cshtml
+++ b/MotoSocia/Views/User/SignIn.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewData["Title"] = "Kayıt Ol";
+    ViewData["Title"] = "Giriş Yap";
 }
 
 <form asp-controller="User" asp-action="Login" method="post" id="loginuserform" data-parsley-validate="">
