--- a/MotoSocia/Views/Shared/_Layout.cshtml
+++ b/MotoSocia/Views/Shared/_Layout.cshtml
@@ -34,7 +34,7 @@
                         @if (Context.User.Identity.Name != null)
                         {
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="">Hesabım</a>
+                                <a class="nav-link text-dark" asp-controller="Account" asp-action="Index">Hesabım</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="LogOut">Çıkış</a>
