--- a/MotoSocia/Views/Account/Index.cshtml
+++ b/MotoSocia/Views/Account/Index.cshtml
@@ -8,4 +8,6 @@
 <p>Hoşgeldin @Model.UserName</p>
 
 <a class="btn btn-primary" asp-controller="Account" asp-action="EditProfile">Biglileri Düzenle</a>
+<br />
+<a class="btn btn-primary" asp-controller="Group" asp-action="CreateGroup">Grup Oluştur</a>
 
